# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/games/: __init__.py  calc.py  even.py  games.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_even.py  cli.py  main.py
