[project]
name = "hexlet-code"
version = "0.1.0"
description = "Mathematical games for brain training"
authors = [
    { name = "Aleksandra Minina", email = "i@minina-work.ru" },
    { name = "Hexlet", email = "hexlet@hexlet.io" },
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]

[project.scripts]
brain-games = "brain_games.scripts.main:main"
brain-even = "brain_games.scripts.main:main"
brain-calc = "brain_games.scripts.main:main"
brain-gcd = "brain_games.scripts.main:main"
brain-progression = "brain_games.scripts.main:main"
brain-prime = "brain_games.scripts.main:main"
